## $Id: Makefile.am,v 1.1 2002/01/20 14:58:53 aleidinger Exp $

include $(top_srcdir)/Makefile.am.global

SUBDIRS = ADbg

EXTRA_DIST = \
	ACM.cpp \
	ACM.dsw \
	ACM.h \
	ACMStream.cpp \
	ACMStream.h \
	LameACM.inf \
	acm.rc \
	adebug.h \
	lame.ico \
	lameACM.def \
	lameACM.dsp \
	main.cpp \
	readme.txt \
	resource.h

