## $Id: Makefile.am,v 1.4 2003/12/09 15:49:00 aleidinger Exp $

include $(top_srcdir)/Makefile.am.global

SUBDIRS = ADbg ddk tinyxml

EXTRA_DIST = \
	ACM.cpp \
	ACM.dsw \
	ACM.h \
	ACMStream.cpp \
	ACMStream.h \
	AEncodeProperties.cpp \
	AEncodeProperties.h \
	DecodeStream.cpp \
	DecodeStream.h \
	LameACM.inf \
	TODO \
	acm.rc \
	adebug.h \
	lame.ico \
	lameACM.def \
	lameACM.dsp \
	lameACM_vc6.dsp \
	lame_acm.xml \
	main.cpp \
	readme.txt \
	resource.h

