## $Id: Makefile.am,v 1.1 2000/10/22 11:39:43 aleidinger Exp $

AUTOMAKE_OPTIONS = foreign ansi2knr

EXTRA_DIST = BladeMP3EncDLL.c \
	BladeMP3EncDLL.def \
	BladeMP3EncDLL.h \
	Example.cpp \
	Example.dsp \
	Example.dsw \
	LameDLLInterface.htm \
	MP3EncDll.dsp \
	MP3EncDll.dsw \
	MP3export.pas \
	README
