## $Id: Makefile.am,v 1.4 2002/04/06 14:08:17 aleidinger Exp $

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = BladeMP3EncDLL.c \
	BladeMP3EncDLL.def \
	BladeMP3EncDLL.h \
	Example.cpp \
	Example.dsp \
	Example.dsw \
	LameDLLInterface.htm \
	LameDll_vc6.dsp \
	MP3EncDll.dsp \
	MP3EncDll.dsw \
	MP3export.pas
