## $Id: Makefile.am,v 1.1 2000/11/11 17:25:44 aleidinger Exp $

AUTOMAKE_OPTIONS = foreign $(top_srcdir)/ansi2knr

EXTRA_DIST = 
	Encoder.cpp \
	Encoder.h \
	Mpegac.cpp \
	Mpegac.def \
	Mpegac.h \
	PropPage.cpp \
	PropPage.h \
	PropPage_adv.cpp \
	PropPage_adv.h \
	Property.rc \
	README \
	REG.CPP \
	REG.H \
	UIDS.H \
	dshow.dsp \
	iaudioprops.h \
	resource.h 
