## $Id: Makefile.am,v 1.3 2001/01/13 18:01:44 aleidinger Exp $

AUTOMAKE_OPTIONS = foreign $(top_srcdir)/ansi2knr

EXTRA_DIST = \
	Encoder.cpp \
	Encoder.h \
	Mpegac.cpp \
	Mpegac.def \
	Mpegac.h \
	PropPage.cpp \
	PropPage.h \
	PropPage_adv.cpp \
	PropPage_adv.h \
	Property.rc \
	README \
	REG.CPP \
	REG.H \
	UIDS.H \
	dshow.dsp \
	dshow.dsw \
	iaudioprops.h \
	resource.h

