## $Id: Makefile.am,v 1.5 2001/01/03 13:06:50 aleidinger Exp $

AUTOMAKE_OPTIONS = foreign $(top_srcdir)/ansi2knr

EXTRA_PROGRAMS = abx ath scalartest

EXTRA_DIST = \
	Lame.vbs \
	auenc \
	lame4dos.bat \
	mugeco.sh \
	mlame \
	mlame_corr.c

abx_SOURCES = abx.c

ath_SOURCES = ath.c

scalartest_SOURCES = scalartest.c

