## $Id: Makefile.am,v 1.6 2001/01/15 15:16:09 aleidinger Exp $

include $(top_srcdir)/Makefile.am.global

EXTRA_PROGRAMS = abx ath scalartest

EXTRA_SCRIPTS = \
	auenc \
	mugeco.sh \
	mlame

EXTRA_DIST = \
	Lame.vbs \
	lame4dos.bat \
	mlame_corr.c

abx_SOURCES = abx.c

ath_SOURCES = ath.c

scalartest_SOURCES = scalartest.c

