## $Id: Makefile.am,v 1.1 2002/04/06 14:08:17 aleidinger Exp $

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	Makefile.tinyxml \
	changes.txt \
	dox \
	makedistlinux \
	makedistwin.bat \
	readme.txt \
	test.dsp \
	test.dsw \
	tinyxml.cpp \
	tinyxml.dsp \
	tinyxml.h \
	tinyxmlerror.cpp \
	tinyxmlparser.cpp \
	xmltest.cpp
