## $Id: Makefile.am,v 1.6 2010/06/11 17:44:36 jaz001 Exp $

AUTOMAKE_OPTIONS = foreign ansi2knr

docdir = $(datadir)/doc
pkgdocdir = $(docdir)/$(PACKAGE)
htmldir = $(docdir)/html
pkghtmldir = $(pkgdocdir)/html

pkghtml_DATA = \
    about.html \
	abr.html \
	cbr.html \
	contact.html \
	contributors.html \
	detailed.html \
	index.html \
	introduction \
	links.html \
	list.html \
	ms_stereo.html \
	usage.html \
	vbr.html

EXTRA_DIST = $(pkghtml_DATA)

